无数据图片版

--- a/src/components/list-view/list-view.styl
+++ b/src/components/list-view/list-view.styl
@@ -51,6 +51,8 @@
           .name
             vertical-align: middle
             display: inline-block
+            no-wrap()
+            max-width 100px
             font-size: $font-size-medium
           .favorite
             display: inline-block
