--- a/src/components/detail-list/detail-list.styl
+++ b/src/components/detail-list/detail-list.styl
@@ -102,13 +102,8 @@
       .image-item
         width: 100%
         margin-bottom: 5px
-  .empty
+  .loading-container
     position: absolute
-    left 50%
-    top: 50%
     width: 100%
-    height 0
-    padding-top: 70%
-    background-size: cover
-    transform-origin: top
-    transform: translate3d(-50%, -50%, 0)
+    top: 50%
+    transform: translateY(-50%)
